--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,7 @@
                     <div class="col-md-6">
                         <div class="payment-method">
                             <h2>We Accept:</h2>
-                            <img src="img/payment-method.png" alt="Payment Method" />
+                            <img src="{% static 'img/payment-method.png' %}" alt="Payment Method" />
                         </div>
                     </div>
                     <div class="col-md-6">
