--- a/templates/signup.html
+++ b/templates/signup.html
@@ -44,11 +44,11 @@
                                 </div>
                                 <div class="col-md-6">
                                     <label>Password</label>
-                                    <input name = 'password' class="form-control" type="text" placeholder="Password">
+                                    <input name = 'password' class="form-control" type="password" placeholder="Password">
                                 </div>
                                 <div class="col-md-6">
                                     <label>Retype Password</label>
-                                    <input name = 'cpassword' class="form-control" type="text" placeholder="Password">
+                                    <input name = 'cpassword' class="form-control" type="password" placeholder="Password">
                                 </div>
                                 <div class="col-md-12">
                                     <button type = "submit" class="btn">Submit</button>
