--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -121,19 +121,19 @@
                                         </ul>
                                     </div>
                                     <div id="reviews" class="container tab-pane fade">
+                                        {% for review in review_product %}
                                         <div class="reviews-submitted">
-                                            <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>
+                                            <div class="reviewer">{{review.name}} - <span>01 Jan 2020</span></div>
                                             <div class="ratting">
+                                                {% for i in 1|ljust:review.star %}
                                                 <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
+                                                {% endfor %}
                                             </div>
                                             <p>
-                                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                                               {{review.comment}}
                                             </p>
                                         </div>
+                                        {% endfor %}
                                         <form method = "POST" action = "/product_review/{{product.slug}}">
                                             {% csrf_token %}
                                         <div class="reviews-submit">
